<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#E3DFE8"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dailytask"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:background="#3F51B5"
            android:text="@string/dailytask"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/maintask"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:background="#3F51B5"
            android:text="@string/maintask"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:background="#3F51B5"
            android:text="@string/profile"
            app:cornerRadius="0dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fortest"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" />

</LinearLayout>