<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/user" />

            <TextView
                android:id="@+id/nametextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/username"
                android:textSize="34sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="#F5F7F8"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/showskill"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="@string/skill"
                    android:textSize="34sp" />

                <ImageView
                    android:id="@+id/addskill"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/plus" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="#F5F7F8"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/showstrength"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="@string/strength"
                    android:textSize="34sp" />

                <ImageView
                    android:id="@+id/addstrength"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/plus" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="#F5F7F8"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/showweeknes"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="@string/weeknees"
                    android:textSize="34sp" />

                <ImageView
                    android:id="@+id/addweeknes"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/plus" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="#F5F7F8"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/showarchievedgoals"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="@string/goal_history"
                    android:textSize="34sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>